testData/org/elixir_lang/inspection/no_parentheses_many_strict_test_case/SingleNestedPositional.ex
outer_function first_outer_argument,
               # second argument is another function call without parentheses, but with multiple arguments
               inner_function first_inner_argument<error descr="unexpected comma.  Parentheses are required to solve ambiguity in nested calls.">,</error>
               ambiguous_keyword_key: ambiguous_keyword_value
